# django-generic-tasks

./: .gitignore  .pre-commit-config.yaml  README.md  README.rst  pyproject.toml
django_generic_tasks/: __init__.py  api.py  apps.py  backends.py  security.py  task.py
django_generic_tasks_example/: manage.py
django_generic_tasks_example/django_generic_tasks_example/: api.py  asgi.py  settings.py  urls.py  wsgi.py
django_generic_tasks_example/my_app/: apps.py  tasks.py
